add vote tool bar

--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -77,6 +77,11 @@ button[type="primary"]{
   font-size: 8px;
 }
 
+.toolbar-fontsize-selected {
+  font-size: 8px;
+  color: @color-primary;
+}
+
 .has-toolbar {
   margin-bottom: @toolbar-height;
 }
