--- a/src/zanui/color.wxss
+++ b/src/zanui/color.wxss
@@ -2,6 +2,18 @@
   color: #f44 !important;
 }
 
+.zan-c-red-darker {
+  color: #450003 !important;
+}
+
+.zan-c-orange {
+  color: #FF9100 !important;
+}
+
+.zan-c-purple {
+  color: #9768D1 !important;
+}
+
 .zan-c-gray {
   color: #c9c9c9 !important;
 }
